WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133138
[Mac] DataCues do not work properly when rewinding video
https://bugs.webkit.org/show_bug.cgi?id=133138
Summary
[Mac] DataCues do not work properly when rewinding video
Brent Fulgham
Reported
2014-05-20 14:46:11 PDT
If you play a video that has embedded WebKitDataCue elements, the cues are displayed properly as you watch the video. However, if you rewind the video, the data cues are not re-displayed.
Attachments
Patch
(4.56 KB, patch)
2014-05-20 14:57 PDT
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
Patch
(8.79 KB, patch)
2014-05-20 18:06 PDT
,
Brent Fulgham
eric.carlson
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2014-05-20 14:49:39 PDT
This bug was introduced with
Bug 132715
(Changeset <
http://trac.webkit.org/changeset/168519
>). 1. DataCue objects do not provide the correct startTimeVariance value for AVFoundation use. 2. The comparison in "hasEquivalentStartTime" should be "<=", rather than "<" to handle the case of zero startTimeVariance.
Radar WebKit Bug Importer
Comment 2
2014-05-20 14:52:00 PDT
<
rdar://problem/16979086
>
Brent Fulgham
Comment 3
2014-05-20 14:57:52 PDT
Created
attachment 231796
[details]
Patch
Eric Carlson
Comment 4
2014-05-20 17:02:19 PDT
Comment on
attachment 231796
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=231796&action=review
Did you mean to mark this r? If so, this looks good to me modulo the TextTrack.h change I don't understand.
> Source/WebCore/html/track/TextTrack.h:162 > + virtual double startTimeVariance() const { return 0; } > +
Why is this needed?
Brent Fulgham
Comment 5
2014-05-20 18:06:14 PDT
Created
attachment 231804
[details]
Patch
Brent Fulgham
Comment 6
2014-05-20 19:21:21 PDT
Comment on
attachment 231796
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=231796&action=review
>> Source/WebCore/html/track/TextTrack.h:162 >> + > > Why is this needed?
This patch wasn't complete. Please check the current one.
Brent Fulgham
Comment 7
2014-05-20 21:09:24 PDT
Committed
r169146
: <
http://trac.webkit.org/changeset/169146
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug