Source/WebCore/html/track/TextTrack.h
@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2011 Google Inc. All rights reserved.
- * Copyright (C) 2011, 2012, 2013 Apple Inc.  All rights reserved.
+ * Copyright (C) 2011, 2012, 2013, 2014 Apple Inc.  All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -157,6 +157,8 @@ public:
 #endif
 
     virtual bool isInband() const { return false; }
+
+    virtual double startTimeVariance() const { return 0; }
 
     using RefCounted<TrackBase>::ref;
     using RefCounted<TrackBase>::deref;
